--- a/blockchain_fyp/pubspec.yaml
+++ b/blockchain_fyp/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   hex: ^0.2.0
   file_picker: ^8.0.7
   dio: ^5.8.0+1
+  open_file: ^3.3.2
+  path_provider: ^2.1.2
   
 
 dev_dependencies:
